--- a/src/app/pages/checkout/components/index/index.component.html
+++ b/src/app/pages/checkout/components/index/index.component.html
@@ -33,7 +33,7 @@
           <section class="border-2 border-dashed border-gray-200 rounded-3xl w-full p-4 sm:p-5">
             <div class="relative rounded-3xl border border-dashed border-gray-200 mx-auto ">
               <table class="w-full text-sm text-center text-gray-500 ">
-                <thead class="text-xs text-gray-700 uppercase bg-gray-50 ">
+                <thead class="text-lg text-gray-700 uppercase bg-gray-50 ">
                   <tr>
                     <th scope="col" class="px-6 py-3">
                       <span class="sr-only">Image</span>
@@ -156,7 +156,8 @@
             </div>
           </div>
           <div class="flex items-center gap-x-3">
-            <button type="submit" class="place-order-button  px-5 py-2.5 ">
+            <button type="submit" class="place-order-button  px-5 py-2.5 disabled:cursor-not-allowed"
+              [disabled]="cartItems.length <=0">
               تأكيد الطلب
             </button>
             <a routerLink="/index" class="font-medium text-lg hover:underline">
