--- a/src/app/pages/checkout/components/index/index.component.html
+++ b/src/app/pages/checkout/components/index/index.component.html
@@ -234,3 +234,124 @@
       </main>
       </div>
 </section>
+======================================
+<div class="bg-white min-h-screen flex justify-center items-center">
+  <div class="space-y-16">
+    <div
+      class="w-96 h-56 m-auto bg-red-100 rounded-xl relative text-white shadow-2xl transition-transform transform hover:scale-110">
+
+      <img class="relative object-cover w-full h-full rounded-xl" src="https://i.imgur.com/kGkSg1v.png">
+
+      <div class="w-full px-8 absolute top-8">
+        <div class="flex justify-between">
+          <div class="">
+            <p class="font-light">
+            <h1> Name
+            </h1>
+            <p class="font-medium tracking-widest">
+              Karthik P
+            </p>
+          </div>
+          <img class="w-14 h-14" src="https://i.imgur.com/bbPHJVe.png" />
+        </div>
+        <div class="pt-1">
+          <p class="font-light">
+          <h1> Card Number
+          </h1>
+          <p class="font-medium tracking-more-wider">
+            4642 3489 9867 7632
+          </p>
+        </div>
+        <div class="pt-6 pr-6">
+          <div class="flex justify-between">
+            <div class="">
+              <p class="font-light text-xs">
+              <h1> Valid
+              </h1>
+              <p class="font-medium tracking-wider text-sm">
+                11/15
+              </p>
+            </div>
+            <div class="">
+              <p class="font-light text-xs text-xs">
+              <h1> Expiry
+              </h1>
+              <p class="font-medium tracking-wider text-sm">
+                03/25
+              </p>
+            </div>
+
+            <div class="">
+              <p class="font-light text-xs">
+              <h1> CVV
+              </h1>
+              <p class="font-bold tracking-more-wider text-sm">
+                ···
+              </p>
+            </div>
+          </div>
+        </div>
+
+      </div>
+    </div>
+
+    <div
+      class="w-96 h-56 m-auto bg-red-100 rounded-xl relative text-white shadow-2xl transition-transform transform hover:scale-110">
+
+      <img class="relative object-cover w-full h-full rounded-xl" src="https://i.imgur.com/Zi6v09P.png">
+
+      <div class="w-full px-8 absolute top-8">
+        <div class="flex justify-between">
+          <div class="">
+            <p class="font-light">
+            <h1> Name
+            </h1>
+            <p class="font-medium tracking-widest">
+              Karthik P
+            </p>
+          </div>
+          <img class="w-14 h-14" src="https://i.imgur.com/bbPHJVe.png" />
+        </div>
+        <div class="pt-1">
+          <p class="font-light">
+          <h1> Card Number
+          </h1>
+          <p class="font-medium tracking-more-wider">
+            4642 3489 9867 7632
+          </p>
+        </div>
+        <div class="pt-6 pr-6">
+          <div class="flex justify-between">
+            <div class="">
+              <p class="font-light text-xs">
+              <h1> Valid
+              </h1>
+              <p class="font-medium tracking-wider text-sm">
+                11/15
+              </p>
+            </div>
+            <div class="">
+              <p class="font-light text-xs text-xs">
+              <h1> Expiry
+              </h1>
+              <p class="font-medium tracking-wider text-sm">
+                03/25
+              </p>
+            </div>
+
+            <div class="">
+              <p class="font-light text-xs">
+              <h1> CVV
+              </h1>
+              <p class="font-bold tracking-more-wider text-sm">
+                ···
+              </p>
+            </div>
+          </div>
+        </div>
+
+      </div>
+    </div>
+  </div>
+</div>
+=================================
