--- a/src/app/pages/checkout/components/index/index.component.html
+++ b/src/app/pages/checkout/components/index/index.component.html
@@ -122,15 +122,16 @@
         </div>
         </div>
       <div class="border-2 border-dashed rounded-3xl border-gray-300 h-96 mb-4 p-5">
-        <form class="">
-          <h3 class="mb-4 text-lg font-semibold leading-none text-gray-900"> تفاصيل الدفع</h3>
+        <h3 class="mb-4 text-lg font-semibold leading-none text-gray-900"> تفاصيل الدفع</h3>
+      <div class="flex items-center justify-between p-2">
+        <form class="w-1/2">
           <div class="grid gap-4 mb-4 sm:grid-cols-2">
       
             <div>
               <label for="card_num" class="block mb-2 text-sm font-medium text-gray-900 :text-white">* Card No.</label>
               <input type="number" name="card_num" id="card_num"
                 class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-600 focus:border-blue-600 block w-full p-2.5 :bg-gray-700 :border-gray-600 :placeholder-gray-400 :text-white :focus:ring-blue-500 :focus:border-blue-500"
-                placeholder="name@company.com" required="">
+                placeholder="name@company.com" >
             </div>
             <div>
               <label for="username" class="block mb-2 text-sm font-medium text-gray-900 :text-white">*(Full name as
@@ -138,7 +139,7 @@
                 on card)</label>
               <input type="text" name="username" id="username"
                 class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-600 focus:border-blue-600 block w-full p-2.5 :bg-gray-700 :border-gray-600 :placeholder-gray-400 :text-white :focus:ring-blue-500 :focus:border-blue-500"
-                placeholder="ُYour Name On Credit Card" required="">
+                placeholder="ُYour Name On Credit Card" >
             </div>
       
             <div>
@@ -146,13 +147,13 @@
               </label>
               <input type="date" name="Expiry-date" id="Expiry-date"
                 class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-600 focus:border-blue-600 block w-full p-2.5 :bg-gray-700 :border-gray-600 :placeholder-gray-400 :text-white :focus:ring-blue-500 :focus:border-blue-500"
-                placeholder="12/24" required="">
+                placeholder="12/24" >
             </div>
             <div>
               <label for="cvc" class="block mb-2 text-sm font-medium text-gray-900 :text-white">* CVC </label>
               <input type="password" name="cvc" id="cvc"
                 class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-600 focus:border-blue-600 block w-full p-2.5 :bg-gray-700 :border-gray-600 :placeholder-gray-400 :text-white :focus:ring-blue-500 :focus:border-blue-500"
-                placeholder="••••" required="">
+                placeholder="••••" >
             </div>
           </div>
           <div class="flex items-center gap-x-3">
@@ -169,7 +170,11 @@
               </svg>
             </a>
           </div>
-          <hr class="my-2">
+          <div class="flex items-center">
+            <hr class="my-2 w-1/2 inline-block">
+            <b class="mx-2"> او</b>
+            <hr class="my-2 w-1/2 inline-block">
+          </div>
           <div class="flex items-center">
             <button type="button"
               class="text-gray-900 bg-[#F7BE38] hover:bg-[#F7BE38]/90 focus:ring-4 focus:outline-none focus:ring-[#F7BE38]/50 font-medium rounded-lg text-sm px-5 py-2.5 text-center inline-flex items-center dark:focus:ring-[#F7BE38]/50 mr-2 mb-2">
@@ -231,128 +236,151 @@
             </button>
           </div>
         </form>
-      </div>
-      </main>
-      </div>
-</section>
-======================================
-<div class="bg-white min-h-screen flex justify-center items-center">
-  <div class="space-y-16">
-    <div
-      class="w-96 h-56 m-auto bg-red-100 rounded-xl relative text-white shadow-2xl transition-transform transform hover:scale-110">
-
-      <img class="relative object-cover w-full h-full rounded-xl" src="https://i.imgur.com/kGkSg1v.png">
-
-      <div class="w-full px-8 absolute top-8">
-        <div class="flex justify-between">
-          <div class="">
-            <p class="font-light">
-            <h1> Name
-            </h1>
-            <p class="font-medium tracking-widest">
-              Karthik P
-            </p>
-          </div>
-          <img class="w-14 h-14" src="https://i.imgur.com/bbPHJVe.png" />
-        </div>
-        <div class="pt-1">
-          <p class="font-light">
-          <h1> Card Number
-          </h1>
-          <p class="font-medium tracking-more-wider">
-            4642 3489 9867 7632
-          </p>
-        </div>
-        <div class="pt-6 pr-6">
-          <div class="flex justify-between">
-            <div class="">
-              <p class="font-light text-xs">
-              <h1> Valid
-              </h1>
-              <p class="font-medium tracking-wider text-sm">
-                11/15
-              </p>
+        <div class="w-1/2 ">
+          <p class="text-gray-300">استخدم احدى البطاقات المحفوظة</p>
+          <div class="flex justify-center items-center">
+            <div
+              class="w-96 h-56 m-auto bg-red-100 rounded-xl relative text-white shadow-2xl transition-transform transform hover:scale-110">
+        
+              <img class="relative object-cover w-full h-full rounded-xl" src="https://i.imgur.com/kGkSg1v.png">
+        
+              <div class="w-full px-8 absolute top-8">
+                <div class="flex justify-between">
+                  <div class="">
+                    <p class="font-light">
+                    <h1> Name
+                    </h1>
+                    <p class="font-medium tracking-widest">
+                      Karthik P
+                    </p>
+                  </div>
+                  <img class="w-14 h-14" src="https://i.imgur.com/bbPHJVe.png" />
+                </div>
+                <div class="pt-1">
+                  <p class="font-light">
+                  <h1> Card Number
+                  </h1>
+                  <p class="font-medium tracking-more-wider">
+                    4642 3489 9867 7632
+                  </p>
+                </div>
+                <div class="pt-6 pr-6">
+                  <div class="flex justify-between">
+                    <div class="">
+                      <p class="font-light text-xs">
+                      <h1> Valid
+                      </h1>
+                      <p class="font-medium tracking-wider text-sm">
+                        11/15
+                      </p>
+                    </div>
+                    <div class="">
+                      <p class="font-light text-xs">
+                      <h1> Expiry
+                      </h1>
+                      <p class="font-medium tracking-wider text-sm">
+                        03/25
+                      </p>
+                    </div>
+        
+                    <div class="">
+                      <p class="font-light text-xs">
+                      <h1> CVV
+                      </h1>
+                      <p class="font-bold tracking-more-wider text-sm">
+                        ···
+                      </p>
+                    </div>
+                  </div>
+                </div>
+        
+              </div>
             </div>
-            <div class="">
-              <p class="font-light text-xs">
-              <h1> Expiry
-              </h1>
-              <p class="font-medium tracking-wider text-sm">
-                03/25
-              </p>
-            </div>
-
-            <div class="">
-              <p class="font-light text-xs">
-              <h1> CVV
-              </h1>
-              <p class="font-bold tracking-more-wider text-sm">
-                ···
-              </p>
-            </div>
-          </div>
-        </div>
-
-      </div>
-    </div>
-
-    <div
-      class="w-96 h-56 m-auto bg-red-100 rounded-xl relative text-white shadow-2xl transition-transform transform hover:scale-110">
-
-      <img class="relative object-cover w-full h-full rounded-xl" src="https://i.imgur.com/Zi6v09P.png">
-
-      <div class="w-full px-8 absolute top-8">
-        <div class="flex justify-between">
-          <div class="">
-            <p class="font-light">
-            <h1> Name
-            </h1>
-            <p class="font-medium tracking-widest">
-              Karthik P
-            </p>
-          </div>
-          <img class="w-14 h-14" src="https://i.imgur.com/bbPHJVe.png" />
-        </div>
-        <div class="pt-1">
-          <p class="font-light">
-          <h1> Card Number
-          </h1>
-          <p class="font-medium tracking-more-wider">
-            4642 3489 9867 7632
-          </p>
-        </div>
-        <div class="pt-6 pr-6">
-          <div class="flex justify-between">
-            <div class="">
-              <p class="font-light text-xs">
-              <h1> Valid
-              </h1>
-              <p class="font-medium tracking-wider text-sm">
-                11/15
-              </p>
-            </div>
-            <div class="">
-              <p class="font-light text-xs">
-              <h1> Expiry
-              </h1>
-              <p class="font-medium tracking-wider text-sm">
-                03/25
-              </p>
-            </div>
-
-            <div class="">
-              <p class="font-light text-xs">
-              <h1> CVV
-              </h1>
-              <p class="font-bold tracking-more-wider text-sm">
-                ···
-              </p>
-            </div>
-          </div>
-        </div>
-
-      </div>
-    </div>
-  </div>
-</div>
-=================================
+        
+            <div
+              class="w-96 h-56 m-auto bg-red-100 rounded-xl relative text-white shadow-2xl transition-transform transform hover:scale-110">
+        
+              <img class="relative object-cover w-full h-full rounded-xl" src="https://i.imgur.com/Zi6v09P.png">
+        
+              <div class="w-full px-8 absolute top-8">
+                <div class="flex justify-between">
+                  <div class="">
+                    <p class="font-light">
+                    <h1> Name
+                    </h1>
+                    <p class="font-medium tracking-widest">
+                      Karthik P
+                    </p>
+                  </div>
+                  <img class="w-14 h-14" src="https://i.imgur.com/bbPHJVe.png" />
+                </div>
+                <div class="pt-1">
+                  <p class="font-light">
+                  <h1> Card Number
+                  </h1>
+                  <p class="font-medium tracking-more-wider">
+                    4642 3489 9867 7632
+                  </p>
+                </div>
+                <div class="pt-6 pr-6">
+                  <div class="flex justify-between">
+                    <div class="">
+                      <p class="font-light text-xs">
+                      <h1> Valid
+                      </h1>
+                      <p class="font-medium tracking-wider text-sm">
+                        11/15
+                      </p>
+                    </div>
+                    <div class="">
+                      <p class="font-light text-xs">
+                      <h1> Expiry
+                      </h1>
+                      <p class="font-medium tracking-wider text-sm">
+                        03/25
+                      </p>
+                    </div>
+        
+                    <div class="">
+                      <p class="font-light text-xs">
+                      <h1> CVV
+                      </h1>
+                      <p class="font-bold tracking-more-wider text-sm">
+                        ···
+                      </p>
+                    </div>
+                  </div>
+                </div>
+              </div>
+              </div>
+              </div>
+              </div>
+              </div>
+              </div>
+              </main>
+              </div>
+              </section>
+              <!-- Modals -->
+              <app-confirm-modal *ngIf="showConfirmationModal" (dismiss)="toggleConfirmationModal()">
+                <div modal-header>
+                </div>
+                <div class="p-6 text-center" modal-body>
+                  <svg aria-hidden="true" class="mx-auto mb-4 text-gray-400 w-14 h-14 " fill="none" stroke="currentColor"
+                    viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
+                    <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+                      d="M12 8v4m0 4h.01M21 12a9 9 0 11-18 0 9 9 0 0118 0z"></path>
+                  </svg>
+                  <h3 class="mb-5 text-lg font-normal text-gray-500 ">تم تأكيد طلب المنتجات بنجاح 🎉</h3>
+                </div>
+                <div modal-footer>
+                  <div class="flex p-5">
+                    <a routerLink="/index" role="button" (click)="toggleConfirmationModal()"
+                      class="mx-0.5 bg-gradient-to-bl from-blue-400 to-blue-700 inline-block px-5 py-2 my-1 text-white font-semibold border-solid border-2 border-gray-200 rounded-3xl shadow-inner hover:bg-gradient-to-br">
+                      عودة للرئيسية
+                    </a>
+                    <a routerLink="/profile" role="button" (click)="toggleConfirmationModal()"
+                      class="mx-0.5 bg-gradient-to-bl from-red-400 to-red-700 inline-block px-5 py-2 my-1 text-white font-semibold border-solid border-2 border-gray-200 rounded-3xl shadow-inner hover:bg-gradient-to-br">متابعة
+                      طلباتي</a>
+                  </div>
+                </div>
+              </app-confirm-modal>
