--- a/src/app/pages/checkout/components/index/index.component.html
+++ b/src/app/pages/checkout/components/index/index.component.html
@@ -237,9 +237,11 @@
           </div>
         </form>
         <div class="w-1/2 ">
-          <p class="text-gray-300">استخدم احدى البطاقات المحفوظة</p>
+          <p class="text-gray-700">استخدم احدى البطاقات المحفوظة</p>
           <div class="flex justify-center items-center">
             <div
+            (click)="onCardSelect(1)"
+            [ngClass]="selectedCardID ===1?'transition-transform transform scale-110 border border-blue-300':''"
               class="w-96 h-56 m-auto bg-red-100 rounded-xl relative text-white shadow-2xl transition-transform transform hover:scale-110">
         
               <img class="relative object-cover w-full h-full rounded-xl" src="https://i.imgur.com/kGkSg1v.png">
@@ -298,6 +300,8 @@
             </div>
         
             <div
+             (click)="onCardSelect(2)"
+              [ngClass]="selectedCardID ===2?'transition-transform transform scale-110 border border-blue-300':''"
               class="w-96 h-56 m-auto bg-red-100 rounded-xl relative text-white shadow-2xl transition-transform transform hover:scale-110">
         
               <img class="relative object-cover w-full h-full rounded-xl" src="https://i.imgur.com/Zi6v09P.png">
