--- a/src/app/pages/checkout/components/index/index.component.html
+++ b/src/app/pages/checkout/components/index/index.component.html
@@ -124,7 +124,7 @@
       <div class="border-2 border-dashed rounded-3xl border-gray-300 h-96 mb-4 p-5">
         <h3 class="mb-4 text-lg font-semibold leading-none text-gray-900"> تفاصيل الدفع</h3>
       <div class="flex items-center justify-between p-2">
-        <form class="w-1/2">
+        <div class="w-1/2">
           <div class="grid gap-4 mb-4 sm:grid-cols-2">
       
             <div>
@@ -157,7 +157,7 @@
             </div>
           </div>
           <div class="flex items-center gap-x-3">
-            <button type="submit" class="place-order-button  px-5 py-2.5 disabled:cursor-not-allowed"
+            <button class="place-order-button  px-5 py-2.5 disabled:cursor-not-allowed"
               (click)="createOrder(cartItems)"
               [disabled]="cartItems.length <=0">
               تأكيد الطلب
@@ -235,7 +235,7 @@
               Pay with MasterCard
             </button>
           </div>
-        </form>
+        </div>
         <div class="w-1/2 ">
           <p class="text-gray-700">استخدم احدى البطاقات المحفوظة</p>
           <div class="flex justify-center items-center">
