--- a/src/app/shared/cart/cart.component.html
+++ b/src/app/shared/cart/cart.component.html
@@ -13,7 +13,7 @@
   <div class="fixed z-20 inset-0 hidden bg-gray-50 bg-opacity-0 transition-opacity md:block" *ngIf="showCartDropdown"
     (click)="toggleCartDropDown()">
   </div>
-  <div *ngIf="showCartDropdown" id="dropdownCard"
+  <!-- <div *ngIf="showCartDropdown" id="dropdownCard"
     class="z-20 absolute top-16 right-1 w-full  max-w-[30%] bg-white divide-y divide-gray-100 rounded-3xl shadow p-1"
     aria-labelledby="dropdownCardButton">
     <div class="block px-4 py-2 font-medium text-center text-gray-700 rounded-t-3 bg-gray-50 ">
@@ -65,10 +65,7 @@
                     </svg>
                   </button>
                   <div>
-                    <!-- <input type="number" id="first_product"
-                      class="bg-gray-50 w-14 border border-gray-300 text-gray-900 text-sm rounded-3xl focus:ring-blue-500 focus:border-blue-500 block px-2.5 py-1 :bg-gray-700 :border-gray-600 :placeholder-gray-400 :text-white :focus:ring-blue-500 :focus:border-blue-500"
-                      [value]="item.quantity"
-                      [placeholder]="item.quantity" required> -->
+                  
                       <label  class="bg-gray-50 w-14 border border-gray-300 text-gray-900 text-sm rounded-3xl focus:ring-blue-500 focus:border-blue-500 block px-2.5 py-1   " >{{item.quantity}}</label>
                   </div>
                   <button
@@ -124,5 +121,6 @@
         متابعة للشراء
       </div>
     </button>
-  </div>
+  </div> -->
+  <app-cart-items *ngIf="showCartDropdown"></app-cart-items>
 </div>
