--- a/src/app/pages/index/components/all-products/all-products.component.html
+++ b/src/app/pages/index/components/all-products/all-products.component.html
@@ -70,10 +70,10 @@
       </div>
     </div>
   </div>
-  <div class="antialiased relative">
+  <div class="antialiased ">
     <!-- Sidebar -->
     <aside
-      class="sticky top-[40%] left-[2%] rounded-3xl z-20 w-60   transition-transform -translate-x-full  border-2 border-gray-200 border-dashed md:translate-x-0"
+      class="sticky  top-[40%] left-[2%] rounded-3xl z-20 w-60 bg-red-50  transition-transform -translate-x-full  border-2 border-gray-200 border-dashed md:translate-x-0"
       aria-label="Sidenav" id="drawer-navigation">
       <div class="overflow-y-auto py-5 px-3 h-full">
         <form>
@@ -153,90 +153,7 @@
 
     <main class="p-4 md:ml-64 h-auto">
       <div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-4 gap-4 mb-4">
-          <a class="group p-3  relative border-2 border-dashed rounded-3xl border-gray-300 " [routerLink]="['../8']">
-            <div class="aspect-h-1 aspect-w-1 w-full overflow-hidden rounded-3xl bg-gray-200 xl:aspect-h-8 xl:aspect-w-7">
-              <img src="https://tailwindui.com/img/ecommerce-images/category-page-04-image-card-01.jpg"
-                alt="Tall slender porcelain bottle with natural clay textured body and cork stopper."
-                class="h-full w-full object-cover object-center hover:opacity-75">
-            </div>
-            <div class="flex flex-row-reverse items-center justify-between">
-              <h3 class="mt-4 text-sm font-semibold text-gray-700">تيشيرت رجالي</h3>
-              <p class="mt-4 text-lg font-medium text-gray-900">$48</p>
-            </div>
-            <h4>جامد اخر حاجة جداا</h4>
-            <a role="button" class="bg-gray-100 border px-4 py-2 rounded-full flex items-center justify-between hover:bg-gray-200">
-              <svg class="w-5 h-5 hover:text-blue-400" fill="none" stroke="currentColor" stroke-width="1.5" viewBox="0 0 24 24"
-                xmlns="http://www.w3.org/2000/svg" aria-hidden="true">
-                <path stroke-linecap="round" stroke-linejoin="round"
-                  d="M2.25 3h1.386c.51 0 .955.343 1.087.835l.383 1.437M7.5 14.25a3 3 0 00-3 3h15.75m-12.75-3h11.218c1.121-2.3 2.1-4.684 2.924-7.138a60.114 60.114 0 00-16.536-1.84M7.5 14.25L5.106 5.272M6 20.25a.75.75 0 11-1.5 0 .75.75 0 011.5 0zm12.75 0a.75.75 0 11-1.5 0 .75.75 0 011.5 0z">
-                </path>
-              </svg>
-              <p>اضافة الى السلة</p>
-            </a>
-          </a>
-          <a class="group p-3  relative border-2 border-dashed rounded-3xl border-gray-300 " [routerLink]="['../8']">
-            <div class="aspect-h-1 aspect-w-1 w-full overflow-hidden rounded-3xl bg-gray-200 xl:aspect-h-8 xl:aspect-w-7">
-              <img src="https://tailwindui.com/img/ecommerce-images/category-page-04-image-card-01.jpg"
-                alt="Tall slender porcelain bottle with natural clay textured body and cork stopper."
-                class="h-full w-full object-cover object-center hover:opacity-75">
-            </div>
-            <div class="flex flex-row-reverse items-center justify-between">
-              <h3 class="mt-4 text-sm font-semibold text-gray-700">تيشيرت رجالي</h3>
-              <p class="mt-4 text-lg font-medium text-gray-900">$48</p>
-            </div>
-            <h4>جامد اخر حاجة جداا</h4>
-            <a role="button" class="bg-gray-100 border px-4 py-2 rounded-full flex items-center justify-between hover:bg-gray-200">
-              <svg class="w-5 h-5 hover:text-blue-400" fill="none" stroke="currentColor" stroke-width="1.5" viewBox="0 0 24 24"
-                xmlns="http://www.w3.org/2000/svg" aria-hidden="true">
-                <path stroke-linecap="round" stroke-linejoin="round"
-                  d="M2.25 3h1.386c.51 0 .955.343 1.087.835l.383 1.437M7.5 14.25a3 3 0 00-3 3h15.75m-12.75-3h11.218c1.121-2.3 2.1-4.684 2.924-7.138a60.114 60.114 0 00-16.536-1.84M7.5 14.25L5.106 5.272M6 20.25a.75.75 0 11-1.5 0 .75.75 0 011.5 0zm12.75 0a.75.75 0 11-1.5 0 .75.75 0 011.5 0z">
-                </path>
-              </svg>
-              <p>اضافة الى السلة</p>
-            </a>
-          </a>
-          <a class="group p-3  relative border-2 border-dashed rounded-3xl border-gray-300 " [routerLink]="['../8']">
-          <div class="aspect-h-1 aspect-w-1 w-full overflow-hidden rounded-3xl bg-gray-200 xl:aspect-h-8 xl:aspect-w-7">
-            <img src="https://tailwindui.com/img/ecommerce-images/category-page-04-image-card-01.jpg"
-              alt="Tall slender porcelain bottle with natural clay textured body and cork stopper."
-              class="h-full w-full object-cover object-center hover:opacity-75">
-          </div>
-          <div class="flex flex-row-reverse items-center justify-between">
-            <h3 class="mt-4 text-sm font-semibold text-gray-700">تيشيرت رجالي</h3>
-            <p class="mt-4 text-lg font-medium text-gray-900">$48</p>
-          </div>
-          <h4>جامد اخر حاجة جداا</h4>
-          <a role="button" class="bg-gray-100 border px-4 py-2 rounded-full flex items-center justify-between hover:bg-gray-200">
-            <svg class="w-5 h-5 hover:text-blue-400" fill="none" stroke="currentColor" stroke-width="1.5" viewBox="0 0 24 24"
-              xmlns="http://www.w3.org/2000/svg" aria-hidden="true">
-              <path stroke-linecap="round" stroke-linejoin="round"
-                d="M2.25 3h1.386c.51 0 .955.343 1.087.835l.383 1.437M7.5 14.25a3 3 0 00-3 3h15.75m-12.75-3h11.218c1.121-2.3 2.1-4.684 2.924-7.138a60.114 60.114 0 00-16.536-1.84M7.5 14.25L5.106 5.272M6 20.25a.75.75 0 11-1.5 0 .75.75 0 011.5 0zm12.75 0a.75.75 0 11-1.5 0 .75.75 0 011.5 0z">
-              </path>
-            </svg>
-            <p>اضافة الى السلة</p>
-          </a>
-        </a>
-        <a class="group p-3  relative border-2 border-dashed rounded-3xl border-gray-300 " [routerLink]="['../8']">
-          <div class="aspect-h-1 aspect-w-1 w-full overflow-hidden rounded-3xl bg-gray-200 xl:aspect-h-8 xl:aspect-w-7">
-            <img src="https://tailwindui.com/img/ecommerce-images/category-page-04-image-card-01.jpg"
-              alt="Tall slender porcelain bottle with natural clay textured body and cork stopper."
-              class="h-full w-full object-cover object-center hover:opacity-75">
-          </div>
-          <div class="flex flex-row-reverse items-center justify-between">
-            <h3 class="mt-4 text-sm font-semibold text-gray-700">تيشيرت رجالي</h3>
-            <p class="mt-4 text-lg font-medium text-gray-900">$48</p>
-          </div>
-          <h4>جامد اخر حاجة جداا</h4>
-          <a role="button" class="bg-gray-100 border px-4 py-2 rounded-full flex items-center justify-between hover:bg-gray-200">
-            <svg class="w-5 h-5 hover:text-blue-400" fill="none" stroke="currentColor" stroke-width="1.5" viewBox="0 0 24 24"
-              xmlns="http://www.w3.org/2000/svg" aria-hidden="true">
-              <path stroke-linecap="round" stroke-linejoin="round"
-                d="M2.25 3h1.386c.51 0 .955.343 1.087.835l.383 1.437M7.5 14.25a3 3 0 00-3 3h15.75m-12.75-3h11.218c1.121-2.3 2.1-4.684 2.924-7.138a60.114 60.114 0 00-16.536-1.84M7.5 14.25L5.106 5.272M6 20.25a.75.75 0 11-1.5 0 .75.75 0 011.5 0zm12.75 0a.75.75 0 11-1.5 0 .75.75 0 011.5 0z">
-              </path>
-            </svg>
-            <p>اضافة الى السلة</p>
-          </a>
-        </a>
+    <app-product-card *ngFor="let product of products" [product]="product"></app-product-card>
       </div>
     </main>
   </div>
